# rss_reader

./: README.md  config.json  setup.cfg
src/: main.py  read_rss.py
